<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="60dip"
    android:background="@android:color/background_light"
    android:gravity="center"
     >

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/action_back" />

    <EditText
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/search"
        android:layout_toRightOf="@+id/back"
        android:gravity="center"
        android:textColor="@android:color/background_dark"
        android:hint="@string/tip" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/ic_menu_search"
        android:contentDescription="@string/query" />

</RelativeLayout>